Updated: revisi, bab 2, BIP

--- a/Lampiran/lampA.tex
+++ b/Lampiran/lampA.tex
@@ -44,13 +44,13 @@
 
 %\lstinputlisting[language=Java, caption=MyCode.java]{./Lampiran/MyCode.java} 
 
-\lstinputlisting[language=Java, caption=Angle.java]{./Lampiran/Angle.java} 
-\lstinputlisting[language=Java, caption=Point.java]{./Lampiran/Point.java} 
-\lstinputlisting[language=Java, caption=CameraSpecification.java]{./Lampiran/CameraSpecification.java} 
-\lstinputlisting[language=Java, caption=CameraPlacement.java]{./Lampiran/CameraPlacement.java} 
-\lstinputlisting[language=Java, caption=Dimension.java]{./Lampiran/Dimension.java} 
-\lstinputlisting[language=Java, caption=Cell.java]{./Lampiran/Cell.java}
-\lstinputlisting[language=Java, caption=GridPoint.java]{./Lampiran/GridPoint.java} 
-\lstinputlisting[language=Java, caption=Room.java]{./Lampiran/Room.java} 
-\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolver.java]{./Lampiran/MinimumCameraPlacementSolver.java} 
-\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolverLPSolve.java]{./Lampiran/MinimumCameraPlacementSolverLPSolve.java} 
+%\lstinputlisting[language=Java, caption=Angle.java]{./Lampiran/Angle.java} 
+%\lstinputlisting[language=Java, caption=Point.java]{./Lampiran/Point.java} 
+%\lstinputlisting[language=Java, caption=CameraSpecification.java]{./Lampiran/CameraSpecification.java} 
+%\lstinputlisting[language=Java, caption=CameraPlacement.java]{./Lampiran/CameraPlacement.java} 
+%\lstinputlisting[language=Java, caption=Dimension.java]{./Lampiran/Dimension.java} 
+%\lstinputlisting[language=Java, caption=Cell.java]{./Lampiran/Cell.java}
+%\lstinputlisting[language=Java, caption=GridPoint.java]{./Lampiran/GridPoint.java} 
+%\lstinputlisting[language=Java, caption=Room.java]{./Lampiran/Room.java} 
+%\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolver.java]{./Lampiran/MinimumCameraPlacementSolver.java} 
+%\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolverLPSolve.java]{./Lampiran/MinimumCameraPlacementSolverLPSolve.java} 
