--- a/data.tex
+++ b/data.tex
@@ -75,8 +75,8 @@
 %=============================================================================
 %\mode{bimbingan} 		% untuk keperluan bimbingan
 %\mode{sidang} 			% untuk sidang 1
-\mode{sidangakhir} 	% untuk sidang 2 / sidang pada Skripsi 2(IF)
-%\mode{final} 			% untuk mencetak buku skripsi 
+%\mode{sidangakhir} 	% untuk sidang 2 / sidang pada Skripsi 2(IF)
+\mode{final} 			% untuk mencetak buku skripsi 
 %=============================================================================
 
 %_____________________________________________________________________________
@@ -196,8 +196,8 @@
 % Petunjuk: hilangkan tanda << & >>, dan isi sesuai dengan data anda
 %=============================================================================
 \namanpm{Prayogo Cendra}{2014730033}
-\tanggal{9}{5}{2018}
-\pembimbing{\CLF}{<<pembimbing pendamping/2>>}    
+\tanggal{18}{5}{2018}
+\pembimbing{\CLF}{}    
 \penguji{<<penguji 1>>}{<<penguji 2>>} 
 %=============================================================================
 
