--- a/referensi.bib
+++ b/referensi.bib
@@ -333,3 +333,24 @@
  address = {New York, NY, USA},
  keywords = {camera arrays, visual sensor placement},
 } 
+
+@article{balas1965additive,
+	title={An additive algorithm for solving linear programs with zero-one variables},
+	author={Balas, Egon},
+	journal={Operations Research},
+	volume={13},
+	number={4},
+	pages={517--546},
+	year={1965},
+	publisher={INFORMS}
+}
+
+@article{narendra1977branch,
+	title={A branch and bound algorithm for feature subset selection},
+	author={Narendra, Patrenahalli M and Fukunaga, Keinosuke},
+	journal={IEEE Transactions on computers},
+	number={9},
+	pages={917--922},
+	year={1977},
+	publisher={IEEE}
+}
