Updated: bab 2, balas additive

--- a/Bab/bab2.tex
+++ b/Bab/bab2.tex
@@ -696,29 +696,31 @@ Terdapat sebuah algoritma yang diciptakan oleh Egon Balas~\cite{balas1965additiv
 
 \subsection{Algoritma \textit{Balas's Additive}}
 \label{balas_additive}
-Setiap masalah \textit{binary integer programming} memiliki kemungkinan solusi berjumlah \(2^n\) karena setiap variabel hanya dapat bernilai 0 atau 1 saja. Apabila menggunakan algoritma \textit{Balas's additive}, maka solusi optimal dari masalah \textit{binary integer programming} dalam kasus umum (\textit{average case}) dapat ditemukan tanpa perlu memeriksa semua \(2^n\) kemungkinan. Dengan demikian, algoritma \textit{Balas's additive} dapat digunakan untuk menemukan solusi optimal bagi masalah \textit{binary integer programming} secara efisien.
+Setiap masalah \textit{binary integer programming} memiliki kemungkinan solusi berjumlah \(2^n\) karena setiap variabel hanya dapat bernilai 0 atau 1 saja. Apabila menggunakan algoritma \textit{Balas's additive}, maka solusi optimal dari masalah \textit{binary integer programming} pada umumnya (\textit{average case}) dapat ditemukan tanpa perlu memeriksa seluruh \(2^n\) kemungkinan. Dengan demikian, algoritma \textit{Balas's additive} dapat digunakan untuk menemukan solusi optimal bagi masalah \textit{binary integer programming} secara efisien.
 
-Untuk menyelesaikan masalah \textit{binary integer programming} menggunakan algoritma \textit{Balas's additive}, maka masalah perlu diubah terlebih dahulu sesuai dengan ketentuan-ketentuan berikut ini:
+Untuk menyelesaikan masalah \textit{binary integer programming} menggunakan algoritma \textit{Balas's additive}, maka masalah perlu diubah terlebih dahulu berdasarkan ketentuan-ketentuan berikut ini:
 
 \begin{itemize}
-	\item Fungsi tujuan dinyatakan dalam bentuk \textit{min} \(z=\sum_{j=1}^{n}c_jx_j\)
-	\item Sebanyak \(m\) batasan harus dinyatakan dalam bentuk pertidaksamaan \(\sum a_{ij} x_j\geq b_i\) untuk \(i=1,2,\dots,m\)
-	\item Setiap variabel \(x_j\) dimana \(j=1,2,\dots,n\) merupakan variabel biner (variabel yang hanya dapat bernilai 0 atau 1).
-	\item Koefisien setiap varibel pada fungsi tujuan tidak bernilai negatif.
-	\item Setiap variabel pada fungsi tujuan diurutkan berdasarkan koefisiennya sehingga \(0\leq c_1 \leq c_2 \leq \dots \leq c_n\)
+	\item Fungsi tujuan dinyatakan dalam bentuk \textit{min} \(z=\sum_{j=1}^{n}c_jx_j\).
+	\item Sebanyak \(m\) batasan harus dinyatakan dalam bentuk pertidaksamaan \(\sum a_{ij} x_j\geq b_i\) untuk \(i=1,2,\dots,m\).
+	\item Setiap variabel \(x_j\) dimana \(j=1,2,\dots,n\) harus merupakan variabel biner (variabel yang hanya dapat bernilai 0 atau 1).
+	\item Koefisien dari setiap varibel pada fungsi tujuan tidak bernilai negatif.
+	\item Setiap variabel pada fungsi tujuan diurutkan menaik berdasarkan koefisiennya sehingga \(0\leq c_1 \leq c_2 \leq \dots \leq c_n\).
 \end{itemize}
 
-Algoritma \textit{Balas's additive} memilih untuk membuat seluruh variabel bernilai 0 agar mendapatkan nilai \(z\) yang paling minimum. Hal ini dikarenakan fungsi tujuan bersifat minimasi dan koefisien pada seluruh variabel tidak bernilai negatif. Apabila terdapat batasan yang tidak dapat dipenuhi akibat dibuatnya seluruh variabel bernilai 0, maka algoritma akan memilih variabel dengan indeks yang terdekat dengan 1 untuk dibuat bernilai 1. Hal ini menyebabkan nilai \(z\) meningkat dengan nilai sekecil mungkin karena variabel telah terurut menaik berdasarkan koefisiennya.
+Pengurutan variabel secara menaik berdasarkan koefisiennya bertujuan agar nilai \(z\) meningkat dengan nilai seminimum mungkin pada setiap iterasi. Mulanya algoritma \textit{Balas's additive} akan membuat seluruh variabel bernilai 0 agar mendapatkan nilai \(z\) yang paling minimum. Apabila solusi bersifat \textit{infeasible}, maka algoritma akan memilih variabel dengan indeks yang terdekat dengan 1 untuk bernilai 1. Hal ini akan menyebabkan nilai \(z\) meningkat dengan nilai terkecil karena variabel telah terurut menaik berdasarkan koefisiennya.
 
-Dalam menjalankan prosedurnya, algoritma \textit{Balas's additive} menggunakan paradigma algoritma \textit{branch and bound}~\cite{narendra1977branch}. \textit{Branch and bound} merupakan algoritma yang berfungsi untuk mendapatkan subhimpunan terbaik dari suatu himpunan yang dilakukan secara efisien tanpa melibatkan \textit{exhaustive search}. Pada \textit{branch and bound} terdapat 2 proses penting, yaitu \textit{branching} dan \textit{bounding}. Proses \textit{branching} bertujuan untuk membagi himpunan solusi menjadi beberapa himpunan solusi yang lebih kecil. Proses \textit{bounding} bertujuan untuk menetapkan nilai \textit{bounding} dari suatu himpunan solusi. Nilai ini digunakan sebagai penentu kelayakan himpunan untuk ditelusuri (dengan \textit{branching}) lebih lanjut.
+Algoritma \textit{Balas's additive} menggunakan paradigma algoritma \textit{branch and bound}~\cite{narendra1977branch} untuk mendapatkan solusi optimal dari seluruh kemungkinan solusi yang ada. \textit{Branch and bound} merupakan algoritma yang dapat mencari solusi terbaik dari suatu himpunan solusi tanpa melibatkan \textit{exhaustive search}. \textit{Branch and bound} bekerja dengan cara dengan membagi himpunan solusi menjadi beberapa subhimpunan secara rekursi hingga mendapatkan solusi terbaik. Pembagian ini hanya dilakukan pada setiap subhimpunan yang dapat menghasilkan solusi terbaik. \textit{Branch and bound} menggunakan struktur data \textit{tree} di mana \textit{root} menunjukkan himpunan keseluruhan solusi dan cabang menunjukkan subhimpunannya. Terdapat 2 proses utama dalam \textit{branch and bound}, yaitu \textit{branching} dan \textit{bounding}. \textit{Branching} berfungsi untuk membagi himpunan solusi menjadi beberapa subhimpunan yang lebih kecil. \textit{Bounding} berfungsi untuk menetapkan nilai \textit{bound} bagi suatu subhimpunan. Nilai \textit{bound} merupakan nilai pembanding dalam menentukan subhimpunan mana yang akan dibagi.
 
-Algoritma \textit{branch and bound} diterapkan dalam algoritma \textit{Balas's additive} untuk mendapatkan solusi optimal dari seluruh kemungkinan solusi yang ada. \textit{Branch and bound} dilakukan dengan menggunakan struktur data pohon biner (\textit{binary tree}). Tingkat kedalaman pada pohon biner berhubungan dengan urutan variabel sehingga setiap tingkat kedalaman mengacu pada setiap variabel sesuai dengan urutannya. Contoh, apabila suatu \textit{node} berada pada kedalaman di tingkat ke-2, maka node tersebut mengacu pada variabel ke-2. Setiap \textit{node} menunjukkan nilai dari variabel yang diacunya. Pohon yang digunakan merupakan pohon biner karena setiap variabel hanya dapat bernilai 0 atau 1 saja, sehingga setiap percabangan (\textit{branching}) akan menghasilkan 2 \textit{node}, yaitu \textit{node} dengan \(x_N=0\) dan \textit{node} dengan \(x_N=1\) di mana \(x_N\) adalah \(x\) \textit{now} (\(x\) pada saat ini) berbeda dengan \(x_n\) (\(x\) terakhir dalam kumpulan \(x\)). Proses \textit{bounding} pada algoritma \textit{Balas's additive} dibedakan menjadi 2 berdasarkan nilai \(x_N\), yaitu:
+\textit{Branch and bound} pada algoritma \textit{Balas's additive} dilakukan dengan menggunakan struktur data \textit{binary tree} karena setiap percabangan menghasilkan 2 \textit{node} di mana salah satu node menunjukkan variabel bernilai 0 dan node lainnya menunjukkan variabel bernilai 1. Setiap tingkat kedalaman pada \textit{binary tree} mengacu pada setiap variabel sesuai dengan urutan yang telah dilakukan sebelumnya. \textit{Branching} terhadap suatu \textit{node} akan menghasilkan 2 \textit{node} baru, yaitu \textit{node} \(x_N=0\) dan \textit{node} \(x_N=1\) di mana \(x_N\) merupakan variabel \(x\) \textit{now} (\(x\) yang diacu oleh \textit{node} pada saat ini) bukan variabel \(x_n\) (\(x\) terakhir dalam kumpulan \(x\)). \textit{Bounding} pada algoritma \textit{Balas's additive} dibedakan menjadi 2 berdasarkan nilai \(x_N\), yaitu:
+
 \begin{itemize}
-	\item Apabila \textit{node} pada saat ini bernilai 1, \(x_N = 1\), maka algoritma berasumsi bahwa \textit{node} pada saat ini dapat memiliki solusi \textit{feasible} sehingga nilai \textit{bounding} untuk \textit{node} ini adalah \(\sum_{j=1}^{N} c_j x_j\).
+	\item Apabila \(x_N = 1\), maka algoritma berasumsi bahwa \textit{node} pada saat ini dapat menghasilkan solusi \textit{feasible} sehingga nilai \textit{bound} untuk \textit{node} ini adalah \(\sum_{j=1}^{N} c_j x_j\). Karena variabel telah diurutkan sebelumnya, maka nilai \textit{bound} ini dipastikan menjadi yang paling rendah untuk saat ini.
 	
-	\item Apabila \textit{node} pada saat ini bernilai 0, \(x_N = 0\), maka nilai \textit{bounding} dari \textit{node} ini adalah \(\sum_{j=1}^{N} c_j x_j + c_{N+1}\).
+	\item Apabila \(x_N = 0\), maka nilai \textit{bound} dari \textit{node} ini adalah \(\sum_{j=1}^{N} c_j x_j + c_{N+1}\). \textit{Node} ini terbentuk karena \textit{node} sebelumnya memiliki solusi yang bersifat \textit{infeasible}. Hal tersebut disebabkan oleh adanya batasan \(\geq\) yang tidak terpenuhi karena total ruas kiri yang lebih kecil daripada ruas kanan. Apabila variabel saat ini bernilai 0, maka batasan tersebut tetap tidak akan terpenuhi sehingga setidaknya harus terdapat 1 variabel lainnya yang bernilai 1, yaitu \(x_{N+1}\). Variabel tersebut dipilih untuk memastikan bahwa nilai \textit{bound} pada saat ini merupakan yang paling rendah.
 \end{itemize}
-Solusi yang didapat dari nilai \textit{bounding} belum tentu merupakan solusi \textit{feasible}. Untuk menentukan apakah solusi bersifat \textit{feasible}, asumsikan bahwa variabel setelah \(x_N\) (saat \(x_N=1\)) atau \(x_{N+1}\) (saat \(x_N=0\)) bernilai 0. Selanjutnya uji solusi terhadap batasan-batasan. Jika tidak ada batasan yang dilanggar, maka \textit{node} dinyatakan sebagai \textit{fathomed} sehingga tidak perlu dilakukannya proses \textit{branching} pada \textit{node} tersebut. Hal ini dikarenakan bahwa turunan dari \textit{node} tersebut tidak akan menghasilkan solusi yang lebih baik jika dibandingkan dengan solusi yang didapat pada \textit{node} tersebut. Solusi \textit{feasible} ini kemudian dibandingkan dengan \textit{incumbent} yang telah ditemukan sebelumnya. Apabila lebih baik, maka solusi ini menjadi \textit{incumbent} yang baru. Apabila node memiliki solusi yang bersifat \textit{infeasible}, maka akan dilakukan proses \textit{branching} dan kembali mengulang proses \textit{bounding} untuk setiap \textit{node} anaknya. Namun sebelum melakukan proses \textit{branching}, akan dilakukan pengecekan untuk memastikan bahwa turunan dari \textit{node} tersebut memiliki kemungkinan untuk menghasilkan solusi \textit{feasible}. Hal ini dilakukan dengan cara memeriksa setiap batasan. Pada setiap batasan, akan dihitung kemungkinan nilai terbesar pada ruas kiri dengan cara menjumlahkan total ruas kiri untuk variabel yang sudah bernilai dengan total ruas kiri terbesar untuk variabel yang belum bernilai. Nilai ruas kiri terbesar untuk variabel yang belum bernilai dapat dicari dengan menjumlahkan setiap variabel berkoefisien positif yang belum bernilai. Jika terdapat 1 atau lebih batasan di mana penjumlahan ruas kiri menghasilkan nilai yang lebih kecil daripada nilai di ruas kanan, maka \textit{node} tersebut dinyatakan sebagai \textit{fathomed} sehingga tidak perlu dilakukannya proses \textit{branching} pada \textit{node} tersebut. Hal ini dikarenakan oleh berapa pun nilai dari variabel yang belum bernilai, batasan tersebut akan tetap gagal untuk dipenuhi karena kemungkinan nilai terbesar pada ruas kiri lebih kecil daripada nilai pada ruas kanan.
+
+Setiap node menunjukkan solusi yang belum tentu bersifat \textit{feasible} sehingga perlu dilakukannya pengecekan. Untuk menentukan apakah solusi bersifat \textit{feasible}, maka akan diasumsikan bahwa variabel setelah \(x_N\) (saat \(x_N=1\)) atau \(x_{N+1}\) (saat \(x_N=0\)) bernilai 0. Selanjutnya, solusi ini akan diuji terhadap setiap batasan. Apabila tidak terdapat batasan yang dilanggar, maka solusi bersifat \textit{feasible} dan \textit{node} dinyatakan \textit{fathomed} sehingga tidak perlu dilakukan \textit{branching}. \textit{Branching} tidak perlu dilakukan karena turunannya tidak akan menghasilkan solusi yang lebih baik. Hal ini telah dipastikan ketika melakukan proses \textit{bounding}. Solusi \textit{feasible} ini kemudian dibandingkan dengan \textit{incumbent} yang telah ditemukan sebelumnya. Apabila lebih baik, maka solusi ini menjadi \textit{incumbent} yang baru. Apabila \textit{node} memiliki solusi yang bersifat \textit{infeasible}, maka akan dilakukan \textit{branching}. Namun sebelum melakukan \textit{branching}, akan dilakukan pengecekan untuk mengetahui apakah turunan dari \textit{node} dapat menghasilkan solusi \textit{feasible}. Pengecekan dilakukan dengan memastikan bahwa setiap batasan memiliki kemungkinan untuk dipenuhi, yaitu dengan memastikan bahwa ruas kiri dengan kemungkinan variabel tersisanya dapat menghasilkan total yang tidak lebih kecil daripada ruas kanan. Total ruas kiri terbesar dapat dicari dengan menjumlahkan ruas kiri untuk variabel hingga saat ini dengan total nilai koefisien positif untuk variabel tersisa. Apabila terdapat 1 atau lebih batasan di mana total ruas kiri lebih kecil daripada nilai ruas kanan, maka \textit{node} tersebut dinyatakan \textit{fathomed} sehingga tidak perlu dilakukan \textit{branching}. \textit{Branching} tidak perlu dilakukan karena batasan tidak dapat dipenuhi dengan berapa pun nilai dari variabel tersisa. Apabila setiap batasan memiliki kemungkinan untuk dipenuhi, maka akan dilakukan \textit{branching} pada \textit{node} tersebut.
 
 %\section{Kakas \textit{lp{\_}solve}}
 %Kakas \textit{lp{\_}solve} merupakan kakas perangkat lunak yang berguna untuk menyelesaikan masalah linear programming\footnote{http://lpsolve.sourceforge.net/5.5/}. Kakas ini dapat menerima masalah linear programming atau masalah integer programming. Kakas lp{\_}solve menggunakan metode \textit{branch and bound} untuk menyelesaikan masalah integer programming. Kakas ini dibangun dengan bahasa pemrograman ANSI C yang dapat dikompilasi dalam lingkungan Unix dan Windows. Untuk menggunakan kakas lp{\_}solve dalam lingkungan pemrograman Java, kakas lp{\_}solve menyediakan kakas penghubung dalam bahasa pemrograman Java sehingga aplikasi Java dapat menggunakan kakas lp{\_}solve. Berikut ini merupakan contoh penggunaan kakas lp{\_}solve dalam pemrograman Java:
