--- a/referensi.bib
+++ b/referensi.bib
@@ -316,23 +316,14 @@
 	publisher={Thomson/Brooks/Cole Belmont\^{} eCalif Calif}
 }
 
-@inproceedings{Horster:2006:OPM:1178782.1178800,
- author = {H\"{o}rster, E. and Lienhart, R.},
- title = {On the Optimal Placement of Multiple Visual Sensors},
- booktitle = {Proceedings of the 4th ACM International Workshop on Video Surveillance and Sensor Networks},
- series = {VSSN '06},
- year = {2006},
- isbn = {1-59593-496-0},
- location = {Santa Barbara, California, USA},
- pages = {111--120},
- numpages = {10},
- url = {http://doi.acm.org/10.1145/1178782.1178800},
- doi = {10.1145/1178782.1178800},
- acmid = {1178800},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {camera arrays, visual sensor placement},
-} 
+@inproceedings{horster2006approximating,
+	title={Approximating optimal visual sensor placement},
+	author={Horster, E and Lienhart, Rainer},
+	booktitle={2006 IEEE International Conference on Multimedia and Expo},
+	pages={1257--1260},
+	year={2006},
+	organization={IEEE}
+}
 
 @article{balas1965additive,
 	title={An additive algorithm for solving linear programs with zero-one variables},
